# compress-pptx

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  MANIFEST.in  README.md  compress_pptx.sh  pyproject.toml  release.sh  setup.cfg  setup.py
.github/workflows/: python-package.yml
bash/: compress_pptx.sh
compress_pptx/: __main__.py  compress_pptx.py  util.py
src/compress_pptx/: __init__.py  __main__.py  compress_pptx.py  util.py
test/: test.pptx  test.py
tests/: test.pptx  test_compress_pptx.py
